--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CSS Example</title>
+	<title>CSS Example</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<div
+	<h1>welcome to my page</h1>
+</div>
+<div
+	<p>our trip</p>
+	<p> i love meet</p>
+</div>
+	<a href="https://github.com/joyce20-meet/y2s19-css">it's a link </a>
+
 </body>
 </html>
